--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,42 +1,64 @@
 /*Navbar*/
 .inline-block {
     display: inline-block;
-    vertical-align: top;
+    vertical-align:top;
+    border: 1px solid red;
+    margin:0;
 }
 
 .logo {
+    display: inline-block;
     width: 23%;
     padding: 1%;
     text-align: center;
+    margin:0;
+    border: 1px solid red;
 }
 
-#nav {
+nav {
+    display:block;
     width: 73%;
     padding: 1%;
 }
 
-#ul {
+ul {
     width: 50%;
-    margin-left: auto;
+    margin-left:0;
+    list-style-type: none;
+    display: inline-block;
 }
-
+.navigation {
+    display: inline-block;
+    vertical-align: top;
+    padding:1%;
+    border: 1px solid red;
+}
 /*HeroImage*/
 .heroImg{
     height: 600px;
     padding: 25px;
+    border: 1px solid red;
+    
 }
 
 .content {
     width: 500px;
     margin: 0 auto;
+    border: 1px solid red;
+    text-align: center;
 }
 /*Footer*/
-#footer {
+footer {
     background-color: #373738;
     text-align: right;
 }
-.ul {
+ul {
     display:inline-block;
     vertical-align: top;
 
+}
+/*etc*/
+img {
+    width: 150px;
+    height: 150px;
 }
